2001-11-18  Elliot Glaysher  <glaysher@umich.edu>

	* lib/doemain (doemain): Updated for sanity.
	* lib/keenspace (machall): Wrote a machall module.
	* lib/keenspot (elf): Updated missing comics list.

2001-11-16  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (roses): Updated missing comics list.
	* lib/keenspot (exploit): Updated missing comics list.
	* lib/sluggy_freelance (sluggy): Updated missing comics list.

2001-11-15  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Added a "Today's Comics" feature.
	* Netcomics/HTML/Set.pm (new): $webpage_filename_tmpl changed to a
	property of the Set class so it can be overrided.
	* Netcomics/HTML/Page.pm (new): $webpage_filename_tmpl changed to a
	property of the Page class so it can be overrided.
	* Netcomics/Util.pm (rlis_hash): Neccessary for the "Today's Comics"
	feature.
	* Netcomics/HTML.pm (create_today_page): Initial commit for this 
	function.
	* Netcomics/Config.pm.in: Added control variables for "Today's Comics".
	* lib/keenspot (elf): updated Elf life missing dates.

2001-11-14  Elliot Glaysher  <glaysher@umich.edu>

	* The "I should probably get off my lazy butt and do something" commit.
	* lib/keenspace: Alphabetized order of comic modules.
	* lib/keenspot (avalon): Updated Avalon's @missing list.
	(keenspot): Fixed regex so it should work. changed "\w+" to "\w*" since
	Avalon sometimes has filenames like avalon20010909s2.gif.

2001-10-02  Elliot Glaysher  <glaysher@umich.edu>

	* lib/megatokyo: Updated to meet megatokyo's erratic archive schedule.
	* lib/doemain: cleared out a non STDERR error message.

2001-10-01  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* INSTALL: Bug 466330: Changed reference to INSTALLBIN to
	INSTALLSCRIPT for changing the location of where the bin scripts
	are installed.
	* show_comics (when_leaving_dialog): Changed report of perlTK
	require error to state that perlTK might not be installed correct
	as well as maybe it's not installed at all.
